Keep `@(Reference)` metadata when creating `@(ProjectReference)` items - #20818 - fix e.g. references to Microsoft.Web.Xdt.Extensions in our packages
Projects of particular interest:
- src/DefaultBuilder/src/Microsoft.AspNetCore.csproj
    - honouring metadata left e.g. Microsoft.AspNetCore.Components.WebAssembly.DevServer package unchanged
    - removed redundant metadata after that confirmation
- src/Razor/tools/Microsoft.AspNetCore.Razor.Internal.Transport/
    - content of this package unchanged but metadata avoids extra work
    - added a comment about the extra work
- src/SiteExtensions/LoggingAggregate/src/Microsoft.AspNetCore.AzureAppServices.SiteExtension/
    - adding metadata seems to **break** produced project; will check after an internal build

Separately, up the timeout in the `<DownloadFile />` task
- hit repeated timeouts downloading dotnet-runtime-5.0.0-rc.1.20370.4-win-x64.zip

nit: remove dupe `@(Reference)` item in Microsoft.AspNetCore.Components.WebAssembly.DevServer.csproj

--- a/eng/targets/ResolveReferences.targets
+++ b/eng/targets/ResolveReferences.targets
@@ -76,8 +76,6 @@
     <_AllowedExplicitPackageReference Include="FSharp.Core" Condition="'$(MSBuildProjectExtension)' == '.fsproj'" />
     <_ExplicitPackageReference Include="@(PackageReference)" Exclude="@(_ImplicitPackageReference);@(_AllowedExplicitPackageReference)" />
 
-    <_UnusedProjectReferenceProvider Include="@(ProjectReferenceProvider)" Exclude="@(Reference)" />
-
     <_CompilationOnlyReference Condition="'$(TargetFramework)' == 'netstandard2.0'"
         Include="@(Reference->WithMetadataValue('NuGetPackageId','NETStandard.Library'))" />
 
@@ -91,14 +89,37 @@
         @(Reference->WithMetadataValue('IsSharedSource', 'true'));
         @(Reference->WithMetadataValue('PrivateAssets', 'All'))" />
     <_OriginalReferences Include="@(Reference)" />
+  </ItemGroup>
 
-    <!--
-      Turn Reference items into a ProjectReference when UseProjectReferences is true.
-      Order matters. This comes before package resolution because projects should be used when possible instead of packages.
+  <!--
+      Turn Reference items into a ProjectReference when UseProjectReferences is true. Intersect the two item groups
+      using the Exclude...Exclude approach because nothing else seems to work outside a target. Order matters; this
+      comes before package resolution because projects should be used when possible instead of packages.
     -->
-    <_ProjectReferenceByAssemblyName Condition="'$(UseProjectReferences)' == 'true'"
-      Include="@(ProjectReferenceProvider)"
-      Exclude="@(_UnusedProjectReferenceProvider)" />
+  <ItemGroup Condition=" '$(EnableCustomReferenceResolution)' == 'true' AND '$(UseProjectReferences)' == 'true' ">
+    <!-- _UnusedProjectReferenceProvider may be a fairly big item group; don't log removals unnecessarily. -->
+    <_UnusedProjectReferenceProvider Remove="@(_UnusedProjectReferenceProvider)" />
+    <_ProjectReferenceByAssemblyName Remove="@(_ProjectReferenceByAssemblyName)" />
+
+    <_UnusedProjectReferenceProvider Include="@(ProjectReferenceProvider)" Exclude="@(Reference)" />
+    <_ProjectReferenceByAssemblyName Include="@(ProjectReferenceProvider)" Exclude="@(_UnusedProjectReferenceProvider)" />
+
+    <!-- Yes, this is doing multiple additional intersections to get possible Reference metadata. -->
+    <_ProjectReferenceByAssemblyName Update="@(Reference->HasMetadata('ExcludeAssets'))">
+      <ExcludeAssets>%(Reference.ExcludeAssets)</ExcludeAssets>
+    </_ProjectReferenceByAssemblyName>
+    <_ProjectReferenceByAssemblyName Update="@(Reference->HasMetadata('IncludeAssets'))">
+      <IncludeAssets>%(Reference.IncludeAssets)</IncludeAssets>
+    </_ProjectReferenceByAssemblyName>
+    <_ProjectReferenceByAssemblyName Update="@(Reference->HasMetadata('Private'))">
+      <Private>%(Reference.Private)</Private>
+    </_ProjectReferenceByAssemblyName>
+    <_ProjectReferenceByAssemblyName Update="@(Reference->HasMetadata('PrivateAssets'))">
+      <PrivateAssets>%(Reference.PrivateAssets)</PrivateAssets>
+    </_ProjectReferenceByAssemblyName>
+    <_ProjectReferenceByAssemblyName Update="@(Reference->HasMetadata('ReferenceOutputAssembly'))">
+      <ReferenceOutputAssembly>%(Reference.ReferenceOutputAssembly)</ReferenceOutputAssembly>
+    </_ProjectReferenceByAssemblyName>
 
     <ProjectReference Include="@(_ProjectReferenceByAssemblyName->'%(ProjectPath)')" />
     <Reference Remove="@(_ProjectReferenceByAssemblyName)" />
